# prime-rl

./: CHANGELOG.md  Dockerfile.cuda  prod.toml  pyproject.toml
benchmarks/scripts/: run_single_benchmark.py
configs/: sft_swe.toml
configs/nemotron_4node/: rl.toml
configs/nemotron_debug/: rl.toml
configs/qwen35_397b_lora/: rl.toml  rl_cp_test.toml  sft_cp_test.toml
docs/: multimodal.md
examples/audio_caption/: rl.toml
scripts/: install_ep_kernels.sh  tmux.sh  view_rollouts.py
skills/installation/: SKILL.md
skills/toml-config/: SKILL.md
src/prime_rl/configs/: orchestrator.py  rl.py  sft.py  shared.py  trainer.py
src/prime_rl/entrypoints/: inference.py  rl.py  sft.py
src/prime_rl/inference/: patches.py  server.py
src/prime_rl/inference/vllm/: server.py
src/prime_rl/inference/vllm/worker/: __init__.py  nccl.py
src/prime_rl/orchestrator/: audio_cache.py  buffer.py  eval_utils.py  filters.py  orchestrator.py  scheduler.py  trajectories.py  utils.py  vf_utils.py  vision_cache.py
src/prime_rl/rendering/: __init__.py  base.py  glm45.py  glm5.py  messages.py  minimax_m2.py  proxy.py  qwen3.py  qwen35.py
src/prime_rl/templates/: disaggregated_rl.sbatch.j2  inference.sbatch.j2  multi_node_rl.sbatch.j2  multi_node_sft.sbatch.j2
src/prime_rl/trainer/: batch.py  ckpt.py  lora.py  model.py  mtp.py  multi_ckpt.py  parallel_dims.py  perf.py  swap_moe_to_grouped.py  utils.py
src/prime_rl/trainer/distributed/: deepep.py  expert_parallel.py
src/prime_rl/trainer/models/: __init__.py  base.py
src/prime_rl/trainer/models/afmoe/: modeling_afmoe.py
src/prime_rl/trainer/models/glm4_moe/: modeling_glm4_moe.py
src/prime_rl/trainer/models/glm_moe_dsa/: modeling_glm_moe_dsa.py  sparse_mla_attention.py
src/prime_rl/trainer/models/layers/: attn.py  checkpointing.py  lm_head.py  mla_attn.py  mlp.py  moe.py  norms.py  rms_norm.py
src/prime_rl/trainer/models/layers/lora/: multi_moe.py
src/prime_rl/trainer/models/llama/: modeling_llama.py
src/prime_rl/trainer/models/minimax_m2/: modeling_minimax_m2.py
src/prime_rl/trainer/models/nemotron_h/: __init__.py  configuration_nemotron_h.py  converting_nemotron_h.py  modeling_nemotron_h.py
src/prime_rl/trainer/models/qwen3_5_moe/: modeling_qwen3_5_moe.py
src/prime_rl/trainer/models/qwen3_moe/: modeling_qwen3_moe.py
src/prime_rl/trainer/rl/: data.py  loss.py  packer.py  train.py
src/prime_rl/trainer/rl/broadcast/: nccl.py
src/prime_rl/trainer/sft/: data.py  train.py
src/prime_rl/transport/: types.py
src/prime_rl/utils/: client.py  config.py  cp.py  elastic.py  metrics_server.py  tensor_indexing.py  usage_reporter.py  utils.py  vlm.py
src/prime_rl/utils/monitor/: multi.py  prime.py  wandb.py
tests/unit/: test_configs.py
tests/unit/inference/: test_server_env.py
tests/unit/orchestrator/: test_batch.py  test_buffer.py  test_scheduler.py  test_sft_trajectories.py  test_trajectories.py
tests/unit/train/: test_deepep.py  test_model_ep_backend.py  test_mtp.py
tests/unit/train/models/: test_nemotron_h.py  test_nemotron_h_kl.py  test_nemotron_h_mamba_compat.py  test_selective_checkpointing.py
tests/unit/train/rl/: test_loss.py  test_nccl_broadcast_preprocess.py  test_nccl_delta_indices.py  test_packer.py
tests/unit/train/sft/: test_sft_dataset.py
tests/unit/utils/: test_client.py
